--- a/src/components/UI/toolbar/Toolbar.scss
+++ b/src/components/UI/toolbar/Toolbar.scss
@@ -19,12 +19,12 @@ $border: #c6c6c6;
   bottom: $phi-squared * 1rem;
   left: 50%;
   transform: translateX(-50%);
-  background-color: rgb(193, 41, 201);
+  //background-color: rgb(193, 41, 201);
   height: 2.4rem;
   width: 10rem;
   z-index: 1000;
   pointer-events: auto;
-  border-radius: 0.25rem;
+  border-radius: 0.2rem;
   opacity: 0;
   visibility: hidden;
   transition: opacity 0.3s ease, visibility 0.3s ease;
@@ -43,7 +43,7 @@ $border: #c6c6c6;
     height: 100%;
     width: 100%;
     background-color: $background;
-    border-radius: 0.25rem;
+    border-radius: 0.2rem;
     box-shadow: #22222233 0px 2px 6px;
     padding: 0 0.5rem;
   }
