--- a/src/components/UI/footer/footer.scss
+++ b/src/components/UI/footer/footer.scss
@@ -44,11 +44,17 @@
 
       .footer-textbox-container {
         pointer-events: none;
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-end;
-        align-items: center;
-        padding-bottom: 50px;
+
+        .footer-textbox-wrapper {
+          pointer-events: auto;
+          width: 100%;
+          height: 100%;
+          display: flex;
+          flex-direction: column;
+          justify-content: flex-end;
+          align-items: center;
+          padding-bottom: 50px;
+        }
 
         .footer-textbox {
           background-color: #000000;
@@ -62,6 +68,28 @@
           font-size: 1.2em;
           pointer-events: auto;
           box-shadow: 0 4px 0 rgba(0, 0, 0, 0.5);
+          height: 50%;
+          display: flex;
+          flex-direction: row;
+          align-items: flex-start;
+          gap: 20px;
+
+          .textbox-face {
+            height: 100%;
+            width: auto;
+            position: relative;
+            object-fit: contain;
+            image-rendering: pixelated;
+            border: 2px solid white;
+            background: black;
+            flex-shrink: 0;
+          }
+
+          .textbox-content {
+            height: 100%;
+            position: relative;
+            flex: 1;
+          }
         }
       }
     }
