--- a/src/pages/lightweight/syrte/Syrte.scss
+++ b/src/pages/lightweight/syrte/Syrte.scss
@@ -5,8 +5,14 @@
 
   .syrte-header {
     position: relative;
-    width: 100%;
-    padding: 4rem 10rem 2rem 10rem;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: clamp( 40rem, calc(100% - 20rem), 1600px);
+    height: auto;
+    padding-left: 1.618034 * 2rem;
+    padding-right: 1.618034 * 2rem;
+    padding-bottom: 5rem;
     text-align: left;
 
     // Tablet and below
@@ -53,8 +59,44 @@
   }
 
   .syrte-content {
-    position: relative;
-    padding: 2rem 10rem 4rem 10rem;
+      position: relative;
+      left: 50%;
+      top: 2rem;
+      transform: translate(-50%, 0);
+      width: clamp( 40rem, calc(100% - 20rem), 1600px);
+      height: auto;
+      padding-left: 1.618034 * 2rem;
+      padding-right: 1.618034 * 2rem;
+      padding-bottom: 5rem;
+      text-align: left;
+      z-index: 2;
+
+      @media screen and (max-width: 1440px) {
+        width: calc(100% - 16rem);
+      }
+
+      @media screen and (max-width: 1024px) {
+        width: calc(100% - 2rem);
+      }
+      //
+      h2{
+        position: relative;
+        top: 2rem;
+        font-size: 2.5rem;
+        margin: 0;
+        font-family: "national-park", "Helvetica Neue", Arial, sans-serif;
+        font-weight: 500;
+        letter-spacing: -0.02em;
+        display: none;
+      }
+
+      p {
+        font-size: 1.25rem;
+        line-height: 1.6;
+        opacity: 0.95;
+        max-width: 700px;
+        margin: 0 auto;
+      }
 
     // Tablet and below
     @media screen and (max-width: 1023px) {
