--- a/src/components/UI/footer/footer.scss
+++ b/src/components/UI/footer/footer.scss
@@ -5,7 +5,7 @@
   width: clamp(40rem, calc(100% - 20rem), 1600px);
   padding: 4rem 1.618034 * 2rem;
   background: white;
-  z-index: 10;
+  z-index: 1;
   margin-top: 4rem;
 
   @media screen and (max-width: 1440px) {
@@ -89,9 +89,57 @@
             height: 100%;
             position: relative;
             flex: 1;
+            display: flex;
+            flex-direction: column;
+
+            .textbox-choices {
+              margin-top: 12px;
+              display: flex;
+              flex-direction: column;
+              gap: 4px;
+
+              .textbox-choice {
+                cursor: pointer;
+                font-family: monospace;
+                font-weight: bold;
+                color: #ffffff;
+                font-size: 1em;
+                white-space: pre;
+                padding: 2px 4px;
+                transition: color 0.1s;
+
+                &.selected {
+                  color: #ffff00;
+                }
+
+                &:hover {
+                  color: #ffff00;
+                }
+              }
+            }
           }
         }
+
       }
+    }
+  }
+
+  .battle-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 10;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: rgba(0, 0, 0, 0.85);
+
+    .battle-canvas {
+      width: 580px;
+      height: 300px;
+      image-rendering: pixelated;
     }
   }
 
