--- a/src/pages/lightweight/syrte/Syrte.scss
+++ b/src/pages/lightweight/syrte/Syrte.scss
@@ -1,32 +1,41 @@
 .syrte-page {
   min-height: 100vh;
+  width: 100%;
   background: white;
   color: #222222;
+  position: relative;
+  gap: 2rem;
+  flex-direction: row;
+  justify-content: center;
 
   .syrte-header {
     position: relative;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     width: clamp( 40rem, calc(100% - 20rem), 1600px);
     height: auto;
+    margin-top: clamp( 5rem, 35vh, 15rem);
     padding-left: 1.618034 * 2rem;
     padding-right: 1.618034 * 2rem;
     padding-bottom: 5rem;
     text-align: left;
+    //background-color: red;
 
-    // Tablet and below
-    @media screen and (max-width: 1023px) {
-      padding: 3rem 4rem 1.5rem 4rem;
-    }
 
-    // Mobile
-    @media screen and (max-width: 767px) {
-      padding: 2rem 1rem 1rem 1rem;
-    }
+      @media screen and (max-width: 1440px) {
+        width: calc(100% - 16rem);
+        padding: 2rem 4rem 3rem 4rem;
+      }
+
+      @media screen and (max-width: 1024px) {
+        width: calc(100% - 2rem);
+        padding: 1.5rem 1rem 2rem 1rem;
+      }
 
     h1 {
-      font-size: 3.5rem;
+      font-size: 4.5rem;
       margin: 0;
       font-family: "national-park", "Helvetica Neue", Arial, sans-serif;
       font-weight: 500;
@@ -42,9 +51,9 @@
     }
 
     p {
-      font-size: 1.5rem;
+      font-size: 1.25rem;
       margin: 1rem 0 0;
-      opacity: 0.8;
+      opacity: 1;
       font-family: "national-park", "Helvetica Neue", Arial, sans-serif;
       font-weight: 400;
 
@@ -60,16 +69,18 @@
 
   .syrte-content {
       position: relative;
-      left: 50%;
+      margin: 0 auto;
       top: 2rem;
-      transform: translate(-50%, 0);
       width: clamp( 40rem, calc(100% - 20rem), 1600px);
       height: auto;
+      display: flex;
+      flex-direction: column;
       padding-left: 1.618034 * 2rem;
       padding-right: 1.618034 * 2rem;
       padding-bottom: 5rem;
       text-align: left;
       z-index: 2;
+      //background-color: red;
 
       @media screen and (max-width: 1440px) {
         width: calc(100% - 16rem);
@@ -78,7 +89,7 @@
       @media screen and (max-width: 1024px) {
         width: calc(100% - 2rem);
       }
-      //
+      
       h2{
         position: relative;
         top: 2rem;
@@ -121,7 +132,7 @@
 
       .gallery-item {
         width: 100%;
-        aspect-ratio: 1 / 1;
+        aspect-ratio: 1 / 1; // Ensures square aspect ratio
         overflow: hidden;
         border-radius: 8px;
 
@@ -134,15 +145,58 @@
       }
     }
 
+    .syrte-conception {
+      position: relative;
+      margin-top: 5rem;
+      display: flex;
+      flex-direction: column;
+      align-items: left;
+      gap: 3rem;
+      //background-color: blue;
+
+      h2 {
+        display: block;
+      }
+
+      p {
+      font-size: 1.25rem;
+      margin: 1rem 0 0;
+      opacity: 1;
+      font-family: "national-park", "Helvetica Neue", Arial, sans-serif;
+      font-weight: 400;
+      }
+    }
+
     .syrte-canvas-wrapper {
+      position: relative;
       width: 100%;
-      height: 60vh;
-      margin-top: 2rem;
+      aspect-ratio: 1 / 1;
+      margin-top: -10rem;
+      margin-bottom: -10rem;
       border-radius: 8px;
       overflow: hidden;
+      z-index: 20;
+      //background-color: red;
 
+      @media screen and (max-width: 1023px) {
+        margin-top: -5rem;
+      }
+
+      // Mobile
       @media screen and (max-width: 767px) {
-        height: 50vh;
+        margin-top: -2rem;
+      }
+
+      .zoom-hint{
+        position: absolute;
+        bottom: 10rem;
+        right: 1rem;
+        transform: translate(-50%, -50%);
+        font-size: 0.8rem;
+      margin: 1rem 0 0;
+      opacity: 1;
+      font-family: "national-park", "Helvetica Neue", Arial, sans-serif;
+      font-weight: 400;
       }
 
       .syrte-scene-container {
@@ -160,6 +214,52 @@
         }
       }
     }
+    .syrte-fabrication {
+      position: relative;
+      margin-top: 5rem;
+      margin-bottom: 5rem;
+      display: flex;
+      flex-direction: column;
+      align-items: left;
+      gap: 3rem;
+      //background-color: blue;
+
+      h2 {
+        display: block;
+      }
+
+      p {
+      font-size: 1.25rem;
+      margin: 1rem 0 0;
+      opacity: 1;
+      font-family: "national-park", "Helvetica Neue", Arial, sans-serif;
+      font-weight: 400;
+      }
+    }
+
+    .syrte-stand {
+      position: relative;
+      margin-top: 5rem;
+      margin-bottom: 5rem;
+      display: flex;
+      flex-direction: column;
+      align-items: left;
+      gap: 3rem;
+      //background-color: blue;
+
+      h2 {
+        display: block;
+      }
+
+      p {
+      font-size: 1.25rem;
+      margin: 1rem 0 0;
+      opacity: 1;
+      font-family: "national-park", "Helvetica Neue", Arial, sans-serif;
+      font-weight: 400;
+      }
+    }
+
   }
 
   .syrte-footer {
