--- a/src/components/UI/toolbar/Toolbar.scss
+++ b/src/components/UI/toolbar/Toolbar.scss
@@ -121,22 +121,22 @@ $border: #222222;
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: space-between;
     height: 47.5%;
     width: 100%;
     border-radius: 0.2rem;
     bottom: 0;
     background-color: #222222;
+    padding: 0 0.5rem;
   }
 
   .toolbar-nav {
-    position: relative;
     display: flex;
-    left: 0.8rem;
+    margin-left: 0.3rem;
     flex-direction: row;
     align-items: center;
-    gap: 0.1rem;
+    gap: 0.2rem;
     height: 100%;
-    //background-color: red;
 
     .toolbar-button {
       width: 47.5%;
@@ -160,6 +160,7 @@ $border: #222222;
     width: 50%;
     height: 2rem;
     flex-shrink: 0;
+    //background-color: red;
 
     svg {
       display: block;
@@ -180,11 +181,32 @@ $border: #222222;
     }
   }
 
-  .toolbar-button-fullscreen {
-    cursor: not-allowed;
+  .toolbar-fullscreen {
+    background: none;
+    border: none;
+    cursor: pointer;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: -0.1rem;
+    //background-color: red;
+    width: 35%;
+    height: 2rem;
+    flex-shrink: 0;
+
 
     svg {
-      opacity: 0.2;
+      display: block;
+      transition: opacity 0.2s ease;
+    }
+
+    &:hover svg {
+      opacity: 0.5;
+    }
+
+    &:active svg {
+      opacity: 0.35;
     }
   }
 }
