--- a/src/pages/lightweight/syrte/Syrte.scss
+++ b/src/pages/lightweight/syrte/Syrte.scss
@@ -16,7 +16,7 @@
     justify-content: center;
     width: clamp( 40rem, calc(100% - 20rem), 1600px);
     height: auto;
-    margin-top: clamp( 5rem, 35vh, 15rem);
+    margin-top: clamp( 5rem, 30vh, 15rem);
     padding-left: 1.618034 * 2rem;
     padding-right: 1.618034 * 2rem;
     padding-bottom: 5rem;
@@ -31,7 +31,14 @@
 
       @media screen and (max-width: 1024px) {
         width: calc(100% - 2rem);
-        padding: 1.5rem 1rem 2rem 1rem;
+        padding-left: 1.618034 * 2rem;
+        padding-right: 1.618034 * 2rem;
+      }
+
+            @media screen and (max-width: 768px) {
+        width: calc(100% - 2rem);
+        padding-left: 1.618034 * 1rem;
+        padding-right: 1.618034 * 1rem;
       }
 
     h1 {
@@ -62,7 +69,7 @@
       }
 
       @media screen and (max-width: 767px) {
-        font-size: 1.1rem;
+        font-size: 1rem;
       }
     }
   }
@@ -80,7 +87,6 @@
       padding-bottom: 5rem;
       text-align: left;
       z-index: 2;
-      //background-color: red;
 
       @media screen and (max-width: 1440px) {
         width: calc(100% - 16rem);
@@ -152,7 +158,14 @@
       flex-direction: column;
       align-items: left;
       gap: 3rem;
-      //background-color: blue;
+
+      @media screen and (max-width: 1024px) {
+        margin-top: 2rem;
+      }
+
+      @media screen and (max-width: 767px) {
+        margin-top: 2rem;
+      }
 
       h2 {
         display: block;
@@ -171,15 +184,14 @@
       position: relative;
       width: 100%;
       aspect-ratio: 1 / 1;
-      margin-top: -10rem;
-      margin-bottom: -10rem;
       border-radius: 8px;
       overflow: hidden;
       z-index: 20;
       //background-color: red;
+      border: dashed 2px #22222267;
 
-      @media screen and (max-width: 1023px) {
-        margin-top: -5rem;
+      @media screen and (max-width: 1024px) {
+        margin-top: 0rem;
       }
 
       // Mobile
@@ -217,12 +229,18 @@
     .syrte-fabrication {
       position: relative;
       margin-top: 5rem;
-      margin-bottom: 5rem;
       display: flex;
       flex-direction: column;
       align-items: left;
       gap: 3rem;
-      //background-color: blue;
+
+      @media screen and (max-width: 1024px) {
+        margin-top: 2rem;
+      }
+
+      @media screen and (max-width: 767px) {
+        margin-top: 2rem;
+      }
 
       h2 {
         display: block;
@@ -245,14 +263,21 @@
       flex-direction: column;
       align-items: left;
       gap: 3rem;
-      //background-color: blue;
+
+      @media screen and (max-width: 1024px) {
+        margin-top: 2rem;
+      }
+
+      @media screen and (max-width: 767px) {
+        margin-top: 2rem;
+      }
 
       h2 {
         display: block;
       }
 
       p {
-      font-size: 1.25rem;
+      font-size: 1.22rem;
       margin: 1rem 0 0;
       opacity: 1;
       font-family: "national-park", "Helvetica Neue", Arial, sans-serif;
